[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "keycloak-token-retriever"
version = "0.1.0"
description = "CLI that runs Keycloak Standard Flow and prints a Bearer token for dev use"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
kc-token = "main:main"

[tool.setuptools]
py-modules = ["main"]
